--- a/src/config/locale/messages/zh/admin/coloring.json
+++ b/src/config/locale/messages/zh/admin/coloring.json
@@ -3,7 +3,7 @@
     "brand": {
       "title": "涂色页面",
       "logo": {
-        "src": "/logo.png",
+        "src": "/logo-v2.png",
         "alt": "涂色页面"
       },
       "url": "/admin/coloring"
@@ -92,6 +92,16 @@
       "status": "状态",
       "jobType": "类型",
       "dateRange": "日期范围"
+    },
+    "status": {
+      "pending": "待处理",
+      "processing": "处理中",
+      "completed": "已完成",
+      "failed": "失败"
+    },
+    "type": {
+      "manual": "手动",
+      "scheduled": "定时"
     },
     "tabs": {
       "all": "全部",
