--- a/src/config/locale/messages/zh/admin/sidebar.json
+++ b/src/config/locale/messages/zh/admin/sidebar.json
@@ -3,7 +3,7 @@
     "brand": {
       "title": "ColoringPages",
       "logo": {
-        "src": "/logo.png",
+        "src": "/logo-v2.png",
         "alt": "ColoringPages"
       },
       "url": "/admin"
