--- a/src/config/locale/messages/zh/ai/chat.json
+++ b/src/config/locale/messages/zh/ai/chat.json
@@ -4,7 +4,7 @@
       "brand": {
         "title": "ColoringPages 聊天",
         "logo": {
-          "src": "/logo.png",
+          "src": "/logo-v2.png",
           "alt": "ColoringPages 聊天"
         },
         "url": "/chat"
